--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,8 @@ set -g status-position top       # macOS / darwin style
 setw -g mode-keys vi
 set -g mouse on
 set -g default-terminal "tmux-256color"
+set -g renumber-windows on
+set -g pane-border-format "#{pane_index} #{pane_title}"
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -17,25 +19,29 @@ bind-key l select-pane -R
 
 # set-option -g default-font "Maple Mono NF CN"
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
+# set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux#v2.1.2'
-
+set -g @plugin 'catppuccin/tmux'
 set -g status-right-length 100
 set -g status-left-length 100
-set -g status-left ""
-set -ag status-left "#{E:@catppuccin_status_session}"
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
-
-# set -g @catppuccin_status_modules_right "directory date_time"
-# set -g @catppuccin_status_modules_left "session"
-# set -g @catppuccin_window_number_position "right"
-# set -g @catppuccin_status_modules_right "directory date_time"
-# set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_status_modules_right "directory date_time"
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_left_separator " "
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_date_time_text "%H:%M"
 
 run '~/.tmux/plugins/tpm/tpm'
